--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "test",
-    "build": "rm -rf dist && webpack"
+    "build": "rm -rf dist && webpack",
+    "dev": "yarn watch",
+    "watch": "rm -rf dist &&  webpack -w"
   },
   "repository": {
     "type": "git",
@@ -26,19 +28,29 @@
     "@babel/cli": "7.10.3",
     "@babel/core": "7.10.3",
     "@babel/preset-env": "7.10.3",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "16.9.41",
+    "@types/react-dom": "16.9.8",
+    "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
     "babel-loader": "8.1.0",
+    "css-loader": "3.6.0",
+    "css-modules-typescript-loader": "4.0.0",
     "eslint": "7.2.0",
+    "eslint-plugin-react": "^7.20.5",
+    "node-sass": "4.14.1",
+    "sass-loader": "9.0.2",
+    "style-loader": "1.2.1",
+    "styled-components": "^5.1.1",
     "ts-loader": "7.0.5",
     "typescript": "3.9.5",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "leaflet": "^1.6.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-leaflet": "^2.7.0"
   }
 }
