--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "es6",
     "moduleResolution": "Node",
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "lib": ["es2015", "dom"]
   },
   "include": [
     "src"
